@@ -1,5 +1,6 @@
 Version 2.02.169 - 
 =====================================
+  Always active splitted RAID LV exclusively locally.
   Do not use LV RAID status bit for segment status.
   Check segtype directly instead of checking RAID in segment status. 
   Reusing exiting code for raid image removal.
